# ai_apps

./: .gitignore  CLAUDE.md  README.md
applications/auto_research/: pyproject.toml
applications/auto_research/helpers/: format_final_plan.py  log_interaction.py  parse_review.py  state_manager.py
applications/scholar_inbox_curate/: .env.example  .gitignore  CHANGELOG.md  README.md  config.toml  pyproject.toml
applications/scholar_inbox_curate/e2e/scrape_test/: config.toml  cookies.json  run_e2e.py  test.db
applications/scholar_inbox_curate/scripts/: daily_update.sh  merge_old_db.py
applications/scholar_inbox_curate/src/: cli.py  config.py  constants.py  db.py  errors.py  retry.py  rules.py  scheduler.py
applications/scholar_inbox_curate/src/citations/: openalex.py  poller.py  semantic_scholar.py  velocity.py
applications/scholar_inbox_curate/src/ingestion/: backfill.py  orchestrate.py  reresolver.py  resolver.py  scraper.py
applications/scholar_inbox_curate/src/web/: app.py  filters.py
applications/scholar_inbox_curate/src/web/routes/: dashboard.py  papers.py  settings.py  stats.py  triggers.py
applications/scholar_inbox_curate/src/web/static/: style.css
applications/scholar_inbox_curate/src/web/templates/: base.html  dashboard.html  error.html  settings.html  stats.html
applications/scholar_inbox_curate/tests/: conftest.py
applications/scholar_inbox_curate/tests/scholar_inbox_curate/: test_critical_fixes.py  test_retry.py
applications/scholar_inbox_curate/tests/scholar_inbox_curate/citations/: test_openalex.py  test_poller.py  test_velocity.py  (+1 more)
(+145 files in other folders)
