[project]
name = "auto-research"
version = "0.1.0"
description = "Multi-agent research ideation and experiment design tool"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["../../tests/auto_research"]
